fix Size too small
fix Size too small

--- a/css/main.css
+++ b/css/main.css
@@ -385,7 +385,7 @@ a.lilisSet {
 */
 
 .navCenter {
-    width: 4%;
+    width: 15%;
     height: 100%;
     display: block;
     margin: 0px;
